DXC管理下のGitからの移行

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "ImageSearch_DXC"
+rootProject.name = "ImageSearch"
 include ':app'
